--- a/boatguard/Base.lproj/Main.storyboard
+++ b/boatguard/Base.lproj/Main.storyboard
@@ -19,6 +19,7 @@
         <mutableArray key="Dosis-SemiBold.otf">
             <string>Dosis-SemiBold</string>
             <string>Dosis-SemiBold</string>
+            <string>Dosis-SemiBold</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -45,7 +46,7 @@
                                 </subviews>
                             </view>
                             <view contentMode="scaleToFill" id="MDu-Km-hOe">
-                                <rect key="frame" x="0.0" y="82" width="320" height="474"/>
+                                <rect key="frame" x="0.0" y="82" width="320" height="487"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xbj-NR-Zkg">
@@ -143,22 +144,48 @@
                                             </button>
                                         </subviews>
                                     </view>
-                                    <view contentMode="scaleToFill" id="xa7-fa-C9U">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="474"/>
+                                </subviews>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" id="dme-bl-59E">
+                                <rect key="frame" x="0.0" y="20" width="320" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MENU" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4cQ-k7-pFh">
+                                        <rect key="frame" x="100" y="20" width="119" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
+                                        <fontDescription key="fontDescription" name="Dosis-SemiBold" family="Dosis" pointSize="24"/>
+                                        <color key="textColor" red="0.20000000000000001" green="0.24313725489999999" blue="0.28235294119999998" alpha="1" colorSpace="deviceRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <size key="shadowOffset" width="0.0" height="0.0"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Xye-UX-JPf">
+                                        <rect key="frame" x="8" y="16" width="46" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rCp-y0-ix9">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="474"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="backgroundColor" red="0.90980398650000005" green="0.90588241820000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
-                                                <color key="sectionIndexBackgroundColor" red="0.90980398650000005" green="0.90588241820000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
-                                                <connections>
-                                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="5Jk-ee-8Ze"/>
-                                                    <outlet property="delegate" destination="9pv-A4-QxB" id="Ffq-7I-fW9"/>
-                                                </connections>
-                                            </tableView>
-                                        </subviews>
-                                    </view>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <state key="normal" title="&lt;">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnBack_click:" destination="9pv-A4-QxB" eventType="touchUpInside" id="fim-KW-GiE"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" id="xa7-fa-C9U">
+                                <rect key="frame" x="0.0" y="82" width="320" height="487"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rCp-y0-ix9">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="487"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.90980398650000005" green="0.90588241820000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="sectionIndexBackgroundColor" red="0.90980398650000005" green="0.90588241820000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="9pv-A4-QxB" id="5Jk-ee-8Ze"/>
+                                            <outlet property="delegate" destination="9pv-A4-QxB" id="Ffq-7I-fW9"/>
+                                        </connections>
+                                    </tableView>
                                 </subviews>
                             </view>
                         </subviews>
@@ -171,7 +198,9 @@
                         <outlet property="txtPass" destination="dyP-MF-fpL" id="zDx-XQ-z4M"/>
                         <outlet property="txtUser" destination="hxE-eE-IW8" id="QGj-9N-0AG"/>
                         <outlet property="viewDashboard" destination="xa7-fa-C9U" id="hPj-Z9-5ew"/>
+                        <outlet property="viewDashboardTitle" destination="dme-bl-59E" id="XkO-IH-2IM"/>
                         <outlet property="viewLogin" destination="MDu-Km-hOe" id="Awc-8S-73k"/>
+                        <outlet property="viewLoginTitle" destination="IcZ-ye-E5l" id="aUQ-ie-USL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
@@ -186,7 +215,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="88" sectionHeaderHeight="22" sectionFooterHeight="22" id="in3-ey-KxE">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="88" sectionHeaderHeight="33" sectionFooterHeight="33" id="in3-ey-KxE">
                                 <rect key="frame" x="0.0" y="110" width="320" height="437"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.90980398650000005" green="0.90588241820000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
@@ -259,7 +288,8 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <state key="normal" title="&lt;">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="btnBack_click:" destination="wUB-Za-a6M" eventType="touchUpInside" id="1Lj-WQ-G0h"/>
@@ -308,7 +338,7 @@
         <image name="location" width="22" height="22"/>
         <image name="logo" width="184" height="22"/>
         <image name="settings" width="22" height="22"/>
-        <image name="tabbar_backgorund" width="184" height="22"/>
+        <image name="tabbar_backgorund" width="640" height="100"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
